# QtTest

./: .gitlab-ci.yml  CMakeLists.txt  main.cpp
.github/workflows/: windows.yml
